--- a/policy.html
+++ b/policy.html
@@ -159,7 +159,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr>
+                                                <tr class="tr_policy">
                                                     <td class="text-center">
                                                         <img src="dist/assets/img/icons/icon_qualitas.svg" alt="Qualitas" width="30px" height="30px">
                                                     </td>
@@ -223,7 +223,7 @@
                                                         </div>
                                                     </td>
                                                 </tr>
-                                                <tr>
+                                                <tr class="tr_policy">
                                                     <td class="text-center">
                                                         <img src="dist/assets/img/icons/icon_qualitas.svg" alt="Qualitas" width="30px" height="30px">
                                                     </td>
@@ -244,7 +244,7 @@
                                                         </div>
                                                     </td>
                                                 </tr>
-                                                <tr>
+                                                <tr class="tr_policy">
                                                     <td class="text-center">
                                                         <img src="dist/assets/img/icons/icon_qualitas.svg" alt="Qualitas" width="30px" height="30px">
                                                     </td>
