--- a/policy.html
+++ b/policy.html
@@ -79,7 +79,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small"><i class="bi bi-person-circle"></i></span>
                                 <img class="img-profile rounded-circle"
                                     src="dist/asset/img/undraw_profile.svg">
                             </a>
@@ -115,7 +115,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4" style="padding-left: 25px;">
                         <h1 class="mb-0 text-gray-800">Pólizas</h1>
                     </div>
 
