--- a/policy.html
+++ b/policy.html
@@ -119,6 +119,77 @@
                         <h1 class="mb-0 text-gray-800">Pólizas</h1>
                     </div>
 
+                    <!-- Example Colored Cards for Dashboard Demo-->
+                    <div class="row">
+                        <div class="col-xxl-3 col-lg-6">
+                            <div class="card bg-primary text-white mb-4">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="mr-3">
+                                            <div class="text-lg font-weight-bold">Todas <span>(5)</span></div>
+                                        </div>
+                                        <i class="feather-xl text-white-50" data-feather="calendar"></i>
+                                    </div>
+                                </div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Report</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xxl-3 col-lg-6">
+                            <div class="card bg-warning text-white mb-4">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="mr-3">
+                                            <div class="text-white-75 small">Earnings (Annual)</div>
+                                            <div class="text-lg font-weight-bold">$215,000</div>
+                                        </div>
+                                        <i class="feather-xl text-white-50" data-feather="dollar-sign"></i>
+                                    </div>
+                                </div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Report</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xxl-3 col-lg-6">
+                            <div class="card bg-success text-white mb-4">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="mr-3">
+                                            <div class="text-white-75 small">Task Completion</div>
+                                            <div class="text-lg font-weight-bold">24</div>
+                                        </div>
+                                        <i class="feather-xl text-white-50" data-feather="check-square"></i>
+                                    </div>
+                                </div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Tasks</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xxl-3 col-lg-6">
+                            <div class="card bg-danger text-white mb-4">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="mr-3">
+                                            <div class="text-white-75 small">Pending Requests</div>
+                                            <div class="text-lg font-weight-bold">17</div>
+                                        </div>
+                                        <i class="feather-xl text-white-50" data-feather="message-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Requests</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Content Row -->
 
                     <div class="row">
