--- a/policy-syncronazing.html
+++ b/policy-syncronazing.html
@@ -63,7 +63,9 @@
                                 <span aria-hidden="true">×</span>
                             </button>
                             <div class="alert-icon-aside">
-                                <i class="fas fa-sync fa-spin ml-2"></i>
+                                <div class="spinner-border text-grey" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
                             </div>
                             <div class="alert-icon-content">
                                 <h6 class="alert-heading">Sincronizando</h6>
@@ -79,7 +81,7 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4" style="padding-left: 25px; padding-right: 25px; margin-top: 80px;">
                         <h1 class="mb-0 text-gray display-4">Pólizas</h1>
-                        <button class="btn btn-success" disabled="true">Sincroizar pólizas <i class="fas fa-spinner fa-spin ml-2"></i></button>
+                        <button class="btn btn-success" disabled="true">Sincroizar pólizas <i class="fas fa-sync fa-spin ml-2"></i></button>
                     </div>
 
                     <!-- Content Row -->
