--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                                 <!-- Social login form-->
                                 <div class="card my-10">
                                     <div class="card-body p-4 text-center">
-                                        <div class="h3 font-weight-light text-primary">Ingresa</div>
+                                        <div class="h3 font-weight-light text-green">Ingresa</div>
                                         <!-- Social login links-->
                                    </div>
                                     <hr class="my-0" />
@@ -48,7 +48,7 @@
                                             <div class="form-group"><a class="small" href="auth-password-social.html">Olvidaste tu contraseña?</a></div>
                                             <!-- Form Group (login box)-->
                                             <div class="form-group d-flex align-items-center justify-content-between mb-0">
-                                                <a class="btn btn-primary btn-block mt-5" href="add-ensurance-account.html">Ingresa</a>
+                                                <a class="btn btn-green btn-block mt-5" href="add-ensurance-account.html">Ingresa</a>
                                             </div>
                                         </form>
                                     </div>
