--- a/policy-syncronazing.html
+++ b/policy-syncronazing.html
@@ -57,7 +57,7 @@
                         </ul>
                     </nav>
 
-                    <div class="container-fluid mb-4">
+                    <div class="container mb-4">
                         <div class="alert alert-success alert-icon" role="alert">
                             <button class="close" type="button" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">×</span>
@@ -76,7 +76,7 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid">
+                <div class="container">
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4" style="padding-left: 25px; padding-right: 25px; margin-top: 80px;">
