--- a/policy-nosynchronized.html
+++ b/policy-nosynchronized.html
@@ -59,7 +59,7 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid">
+                <div class="container">
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4" style="padding-left: 25px; padding-right: 25px; margin-top: 80px;">
