--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
                                 <!-- Social registration form-->
                                 <div class="card my-10">
                                     <div class="card-body p-4 text-center">
-                                        <div class="h3 font-weight-light text-primary">Create una cuenta</div>
+                                        <div class="h3 font-weight-light text-green">Create una cuenta</div>
                                         <!-- Social registration links-->
                                    </div>
                                     <hr class="my-0" />
@@ -82,7 +82,7 @@
                                                         .
                                                     </label>
                                                 </div>
-                                                <a class="btn btn-primary" href="add-ensurance-account.html">Crear cuenta</a>
+                                                <a class="btn btn-green" href="add-ensurance-account.html">Crear cuenta</a>
                                             </div>
                                         </form>
                                     </div>
